--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
 
     <div id="formContacto"></div>
 
+    <button type="button" class="btn btn-primary botsuc">Sucursales</button>
+
+    <div id="lista"></div>
+
     
     <!-- SCRIPTS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
